--- a/glcweb.css
+++ b/glcweb.css
@@ -9,11 +9,21 @@
 
 .glcabout h1{
     color: #fada5e;
-    font-size: 35px;
+    font-size: 40px;
+}
+
+.glcabout h2{
+    color: #f5f5f5;
+    font-size: 20px;
+}
+
+.glcabout p{
+    color: #f5f5f5;
+    font-size: 25px;
 }
 
 .glcabout ul{
     margin-left: 50px;
     color: #f5f5f5;
-    font-size: 15px;
+    font-size: 20px;
 }
